# jp_stock_system

./: .clinerules  .dockerignore  .geminirules  .gitignore  Cargo.toml  Dockerfile  README.md  debug_news.html  docker-compose.yml  export_2026-03-16.csv  push.command  result.csv  settings.toml  stocks.db  ログ.txt  実装内容.txt  無題のドキュメント  無題のドキュメント 2
.continue/mcpServers/: new-mcp-server.yaml
.github/workflows/: Only_Sync_Yahoo  Only_Sync_Yahoo.yml  ai_scout.yml  daily_scrape.yml
data/: .~lock.jpx_codes.csv#  jpx_codes.csv  processed_market_data.parquet
jp_stock_system/: Cargo.toml  stocks.db
jp_stock_system/data/: jpx_codes.csv
jp_stock_system/src/: api.rs  db.rs  main.rs  model.rs
logs/: ai_scout_results.txt
scripts/: notify.py
src/: lib.rs  main.rs  news_crawler.rs  news_merger.rs  notifier.rs  paper_trade.rs
src/alpha/: alpha_a.rs  alpha_b.rs  mean_reversion.rs  mod.rs
src/analysis/: alpha_analysis.rs  mod.rs  rank.rs
src/api/: approver.rs  discord.rs  gemini.rs  jquants.rs  mod.rs  ollama.rs  yahoo.rs
src/collector/: stock_collector.rs
src/db/: sqlite.rs
src/engine/: alpha.rs  backtest.rs  features.rs  mod.rs  portfolio.rs
src/engine/collector/: mod.rs
src/exporter/: csv_export.rs  risk.rs
src/indicator/: ma.rs  mod.rs  rsi.rs
src/legacy/: get_codes.rs  get_prices.rs  production.rs  stock.rs  sync_data.rs  sync_news.rs  sync_yahoo_full.rs  test_json.rs  test_merge.rs  test_ollama.rs  test_yahoo_scraping.rs
src/model/: mod.rs  ohlc.rs
src/portfolio/: combine.rs  mod.rs  regime.rs  weight.rs
src/research/: ic_test.rs  mod.rs
src/strategy/: rsi_screen.rs
src/utils/: io.rs  mod.rs  settings.rs
tests/: alpha_tests.rs  config_tests.rs
