[package]
name = "jp_stock_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"      # ← これ追加
rusqlite = "0.30"
chrono = "0.4"
futures = "0.3"
rayon = "1.8"
csv = "1.3"
rand = "0.8"
nalgebra = "0.32"
ndarray = "0.15"
ndarray-linalg = "0.16"
ndarray-stats = "0.5"